<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryBG"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/rounded_btn_bg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/str_next"
        android:textColor="#fff" />

    <RelativeLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/heading_background_top_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_bold"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:text="Tell Us More About You" />

    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/heading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Activities.PersonalInfoTakingActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/blackColor"
            android:layout_marginTop="30dp"
            android:text="@string/str_info_provide_request" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgView_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/person_iccc" />

            <EditText
                android:layout_marginTop="100dp"
                android:id="@+id/editTxt_name"
                android:layout_width="match_parent"
                android:textColor="@color/colorWhite"
                android:background="@drawable/edit_text_bg"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:textColorHint="@color/colorWhite"
                android:layout_height="50dp"
                android:paddingLeft="20dp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginEnd="@dimen/_15sdp"
                android:singleLine="true"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:hint="@string/str_type_name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTXt_about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:maxLines="1"
                android:fontFamily="@font/montserrat_regular"
                android:paddingRight="20dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@drawable/edit_text_bg"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:hint="@string/str_about"
                android:textSize="14sp" />

    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView.Large"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@id/btn_next"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:visibility="visible"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="LineSpinFadeLoaderIndicator" />
</RelativeLayout>