<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.StatusFragment">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
      <androidx.cardview.widget.CardView
          android:id="@+id/cardView_my_status"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
      <RelativeLayout
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <com.mikhaellopez.circularimageview.CircularImageView
              android:id="@+id/img_status"
              android:layout_width="@dimen/_50sdp"
              android:layout_height="@dimen/_50sdp"
              android:src="@drawable/ic_account_circle_black_48dp"
              android:layout_marginStart="@dimen/_15sdp"
              android:layout_centerVertical="true"/>
          <LinearLayout
              android:layout_centerVertical="true"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_toRightOf="@id/img_status"
              android:layout_marginStart="@dimen/_15sdp">
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/str_mystatus"
                  android:textColor="@color/blackColor"
                  android:textSize="@dimen/_14ssp" />
              <TextView
                  android:id="@+id/txtView_date"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/str_dummy_date"/>

          </LinearLayout>
          <ImageView
              android:id="@+id/imgView_dots"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:tint="@color/blackColor"
              android:src="@drawable/ic_more_horiz_black_24dp"
              android:layout_alignParentEnd="true"
              android:layout_centerVertical="true"
              android:layout_marginEnd="@dimen/_10sdp"/>
      </RelativeLayout>
      </androidx.cardview.widget.CardView>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/str_recent_updates"
              android:layout_marginStart="@dimen/_15sdp"
              android:layout_marginTop="@dimen/_5sdp"
              android:textSize="@dimen/_12ssp"/>
          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
              <androidx.recyclerview.widget.RecyclerView
                  android:id="@+id/recView_recentupdates"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>
          </androidx.cardview.widget.CardView>
      </LinearLayout>
  </ScrollView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"

        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_text_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/ic_edit_white_24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_img_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_alt_white_24dp"
            android:layout_marginBottom="@dimen/_10sdp"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_video_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_videocam_white_24dp"
            android:layout_marginBottom="@dimen/_15sdp"/>

    </LinearLayout>
</RelativeLayout>